day 2 update prob2

--- a/Jan08-Day2/package.json
+++ b/Jan08-Day2/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@tensorflow/tfjs-node": "^1.5.1"
+    "@tensorflow/tfjs-node": "^1.5.1",
+    "express": "^4.17.1"
   }
 }
